--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,8 @@
 
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
+
+  <tweet-list name="test" [tweets]=tweets></tweet-list>
   <p>
     This starter project comes with simple tabs-based layout for apps that are going to primarily use a Tabbed UI.
   </p>
