--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,10 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Tweets</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+<ion-content>
 
-  <tweet-list name="test" [tweets]=tweets></tweet-list>
-  <p>
-    This starter project comes with simple tabs-based layout for apps that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs, update any existing page or create new pages.
-  </p>
-  <button ion-item *ngFor="let header of headers" (click)="itemSelected(header)">
-    {{ header.key }}:{{ header.value }}
-  </button>
+  <tweet-list [tweets]=tweets></tweet-list>
 </ion-content>
