cleanup, add loadMoreTweets

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,5 +6,5 @@
 
 <ion-content>
 
-  <tweet-list [tweets]=tweets></tweet-list>
+  <tweet-list [tweets]=tweets [loadMore]=loadMoreTweets></tweet-list>
 </ion-content>
