--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,8 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <tweet-list [tweets]=tweets [loadMore]=loadMoreTweets></tweet-list>
 </ion-content>
