add searchTwitter fn and searchTerm

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <tweet-list [tweets]=tweets [loadMore]=loadMoreTweets></tweet-list>
+  <tweet-list [tweets]=tweets [loadMore]=loadMoreTweets [searchTwitter]=searchTwitter></tweet-list>
 </ion-content>
