--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Tweets current search: {{searchTerm}}</ion-title>
-  </ion-navbar>
-  <ion-row align-items-center>
-    <ion-col col-10 align-self-center>
-      <ion-searchbar (search)="searchFn($event)" #searchbar debounce="300" animated=true></ion-searchbar>
-    </ion-col>
-    <ion-col align-self-center>
+    <ion-buttons end>
       <button ion-button icon-only (tap)="press($event)">
-              <ion-icon name="heart"></ion-icon>
-          </button>
-    </ion-col>
+        <ion-icon name="microphone"></ion-icon>
+    </button>
+    </ion-buttons>
+  </ion-navbar>
 
-  </ion-row>
+  <ion-searchbar (search)="searchFn($event)" #searchbar debounce="300" animated=true></ion-searchbar>
+
 
 
 </ion-header>
