--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Tweets current search: {{searchTerm}}</ion-title>
+    <ion-title>{{searchTerm}}</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (tap)="press($event)">
         <ion-icon name="microphone"></ion-icon>
