refactoring all types into own file, rename method

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <ion-title>{{searchTerm}}</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (tap)="press($event)">
+      <button ion-button icon-only (tap)="recognizeSpeech($event)">
         <ion-icon name="microphone"></ion-icon>
     </button>
     </ion-buttons>
