--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About2
+      About
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <h2>something</h2>
 </ion-content>
