--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,24 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Imprint
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+  <ion-card>
     <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
+      <h2>M-Way Solutions GmbH</h2>
+      <p> Stresemannstraße 79<br> 70191 Stuttgart<br> Deutschland
+        <br> Vertreten durch:</p>
+      <p>Volker Hahn, Geschäftsführer<br> Richard Malley, Geschäftsführer</p>
     </ion-item>
-  </ion-list>
+    <ion-item>
+      <h3>Kontakt:</h3>
+      <p>T: +49 (0) 711 25254 – 60<br> F: +49 (0) 711 25254 – 70<br> E: <a href="mailto:info@mwaysolutions.com">info@mwaysolutions.com</a><br>        W: <a href="https://www.mwaysolutions.com/">www.mwaysolutions.com</a><br> Umsatzsteuer-ID: DE240271880</p>
+      <p>Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: DE240271880<br> Sitz und Registergericht<br> Stuttgart
+        HRB 25158</p>
+    </ion-item>
+  </ion-card>
 </ion-content>
