--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,14 +10,13 @@
   <ion-item>
     <ion-label>sort tweets by:</ion-label>
     <ion-select [(ngModel)]="sortBy">
-      <ion-option selected value="author">Author</ion-option>
+      <ion-option value="none">None</ion-option>
+      <ion-option value="author">Author</ion-option>
       <ion-option value="date">Date</ion-option>
+
     </ion-select>
   </ion-item>
-  <ion-searchbar (search)="searchFn($event)" #searchbar debounce="300" animated=true></ion-searchbar>
-
-
-
+  <ion-searchbar (search)="searchFn($event)" (ionInput)="onType($event)" #searchbar debounce="300" animated=true></ion-searchbar>
 </ion-header>
 
 <ion-content>
@@ -36,4 +35,5 @@
       <button ion-fab (click)="toggleSearchOnline($event)"><ion-icon [name]="searchOnline ? 'cloud-done' : 'cloud'"></ion-icon></button>
     </ion-fab-list>
   </ion-fab>
+
 </ion-content>
